// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  <NewPost
    key="new-post"
    onPostCreated={[Function]}
/>,
  "",
]
`;

exports[`Container renders a default posts page 1`] = `
Array [
  <NewPost
    key="new-post"
    onPostCreated={[Function]}
/>,
  <PostsList
    key="posts-list"
    onPostDeleted={[Function]}
    posts={
        Array [
            Object {
              "body": "World",
              "title": "Hello",
            },
          ]
    }
/>,
]
`;
